--- a/ui/datos_pelicula.ui
+++ b/ui/datos_pelicula.ui
@@ -59,7 +59,7 @@
    <item row="10" column="0">
     <widget class="QLabel" name="label_2">
      <property name="text">
-      <string>puntuacion:</string>
+      <string>Puntuación:</string>
      </property>
     </widget>
    </item>
